--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Python
 __pycache__/
 *.py[cod]
 *.egg
@@ -6,23 +5,14 @@ __pycache__/
 dist/
 build/
 *.log
-
-# Virtual Environment
 .venv/
 env/
 venv/
-
-# Jupyter Notebooks checkpoints
 .ipynb_checkpoints/
-
-# IDE/Editor
 .vscode/
 .idea/
-
-# Data files (если не хочешь загружать сырые данные)
 data/raw/
 *.csv
-
-# OS
 .DS_Store
 Thumbs.db
+.cache.*
