feat: manage code for deploying

--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,18 @@ __pycache__/
 *.py[cod]
 *.egg
 *.egg-info/
-dist/
-build/
 *.log
+.ipynb_checkpoints/
 .venv/
 env/
 venv/
-.ipynb_checkpoints/
 .vscode/
 .idea/
-data/raw/
-outputs/
-*.csv
 .DS_Store
 Thumbs.db
+data/raw/
+!outputs/
+outputs/*
+!outputs/predictions/
+!outputs/predictions/*.csv
 .cache.*
